--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="buttons">
            <div class="btn1">
             <button class="btn">
-                <a href="../login page/index.html">Login</a>
+                <a href="https://artolita17.github.io/modernized-recording-loginpage/">Login</a>
             </button>
            </div>
             <button class="btn">Signup</button>
