--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <a href="https://artolita17.github.io/modernized-recording-loginpage/">Login</a>
             </button>
            </div>
-            <button class="btn">Signup</button>
+            <button class="btn">
+                <a href="https://artolita17.github.io/modernized-recording-signup/">Signup</a>
+            </button>
         </div>
 
     </nav>
