--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class="buttons">
            <div class="btn1">
             <button class="btn">
-                <a href="https://artolita17.github.io/modernized-recording-loginpage/">Login</a>
+                <a class="b1" href="https://artolita17.github.io/modernized-recording-loginpage/">Login</a>
             </button>
            </div>
             <button class="btn">
-                <a href="https://artolita17.github.io/modernized-recording-signup/">Signup</a>
+                <a class="b2" href="https://artolita17.github.io/modernized-recording-loginpage/">Signup</a>
             </button>
         </div>
 
